migration-test/05-policies/demo-app-grpc-service-timeout.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: grpc-service-timeout
  namespace: demo-app
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: grpc-service
  timeout:
    tcp:
      connectTimeout: 5s
    http:
      requestTimeout: 600s
