migration-test/05-policies/demo-app-main-website-rate-limit.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: main-website-rate-limit
  namespace: demo-app
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: main-website
  rateLimit:
    type: Local
    local:
      rules:
        - limit:
            requests: 50
            unit: Second
