migration-test/05-policies/demo-app-main-website-timeout.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: main-website-timeout
  namespace: demo-app
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: main-website
  timeout:
    tcp:
      connectTimeout: 5s
    http:
      requestTimeout: 120s
